<resources>
    <string name="app_name">Platzigramv2</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña de usuario</string>
    <string name="text_button_login">Iniciar sesión</string>
    <string name="dont_have_account">¿No tienes cuenta?</string>
    <string name="create_here">, Crear una aquí</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_nickname">Usuario</string>
    <string name="hint_re_password">Confirmar contraseña</string>
    <string name="join_us">Únete</string>
    <string name="toolbar_title_create_account">Crear cuenta</string>
    <string name="username_card">Daniel Mora</string>
    <string name="firstWord">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likenumbercard_card">10 Me Gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
